[gd_scene load_steps=9 format=2]

[ext_resource path="res://Utilities/Player.gd" type="Script" id=1]
[ext_resource path="res://Audio/SE/bump.WAV" type="AudioStream" id=2]
[ext_resource path="res://Graphics/Characters/PU-Pluto.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Down"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.13, 0.25, 0.38 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Left"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.13, 0.25, 0.38 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Right"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.13, 0.25, 0.38 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Up"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.13, 0.25, 0.38 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 16, 16 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 5
collision_mask = 5
script = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Timer" type="Timer" parent="AudioStreamPlayer"]
wait_time = 0.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Down = SubResource( 1 )
anims/Left = SubResource( 2 )
anims/Right = SubResource( 3 )
anims/Up = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
offset = Vector2( 0, -32 )
vframes = 4
hframes = 4

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 0, -32 )
current = true
drag_margin_h_enabled = false
drag_margin_v_enabled = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -16 )
shape = SubResource( 5 )

[node name="MoveTween" type="Tween" parent="."]

[node name="RayCastDown" type="RayCast2D" parent="."]
position = Vector2( 0, -16 )
enabled = true
cast_to = Vector2( 0, 32 )

[node name="InteractRayDown" type="RayCast2D" parent="."]
position = Vector2( 0, -16 )
enabled = true
cast_to = Vector2( 0, 32 )
collision_mask = 2

[node name="InteractRayLeft" type="RayCast2D" parent="."]
position = Vector2( 0, -16 )
enabled = true
cast_to = Vector2( -32, 0 )
collision_mask = 2

[node name="InteractRayRight" type="RayCast2D" parent="."]
position = Vector2( 0, -16 )
enabled = true
cast_to = Vector2( 32, 0 )
collision_mask = 2

[node name="InteractRayUp" type="RayCast2D" parent="."]
position = Vector2( 0, -16 )
enabled = true
cast_to = Vector2( 0, -32 )
collision_mask = 2

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2( 0, -16 )
enabled = true
cast_to = Vector2( -32, 0 )

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2( 0, -16 )
enabled = true
cast_to = Vector2( 32, 0 )

[node name="RayCastUp" type="RayCast2D" parent="."]
position = Vector2( 0, -16 )
enabled = true
cast_to = Vector2( 0, -32 )
[connection signal="timeout" from="AudioStreamPlayer/Timer" to="." method="_on_Timer_timeout"]
[connection signal="tween_completed" from="MoveTween" to="." method="_on_MoveTween_tween_completed"]
